platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_45.platter
start(){
    serve 0;
}
piece of x = 3;